# langchain-poc

./: .gitignore  Makefile  README.md  docker-compose.yaml  example.local.env  pyproject.toml
langchain_poc/: app.py  intro_chat_prompts.py  main.py
langchain_poc/config/: __init__.py  settings.py
langchain_poc/examples/: base.py  chains.py  intro_chat_prompts.py  lang_parser.py  memory.py
langchain_poc/examples/chains/: chains_story.py
langchain_poc/examples/langchain/: base.py  intro_chat_prompts.py  lang_parser.py  memory.py  pdf_loader.py
langchain_poc/examples/langchain/agents/: agent_with_two_tools.py  conversational_agent.py  docstore_agent.py  self_ask_agent.py  simple_agent.py
langchain_poc/examples/langchain/chains/: chain.py  router_chain.py  sequential_chain.py
langchain_poc/examples/langchain/splitters/: text_splitter.py  text_splitter_recursive.py
langchain_poc/examples/langchain/vector_embeds/: embeds_creating.py  embeds_retrieval.py  embeds_retrieval_pgvector.py  embeds_storing.py
langchain_poc/examples/streamlit/: lullaby_story.py
resources/: text_splitter_example.txt  the-three-sillies.txt
