[tool.poetry]
name = "langchain-poc"
version = "0.1.0"
description = ""
authors = ["DmytroZasl <zaslavsky.dima20@gmail.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
black = "^23.11.0"
ruff = "^0.1.5"
langchain = "^0.0.336"
openai = "0.28.1"
pydantic-settings = "^2.1.0"
pydantic = "^2.5.1"
streamlit = "^1.28.2"
pypdf = "^3.17.1"
tiktoken = "^0.5.1"
chromadb = "^0.4.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Linters
[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
target-version = "py311"
line-length = 100

select = [
    "I",  # isort
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "F",  # pyflakes
    "E",  # pycodestyle
    "TID",  # flake8-tidy-imports
    "RUF", # ruff-internal
    "C901", # mccabe
]
ignore = [
    "E501",  # line too long, handled by black
    "C401",  # generator syntax for sets vs always force set comprehension
    "PLC0414",  # allow explicit re-exports using 'as' without forcing __all__
    "RUF001", # allow CYRILLIC letter
]

    [tool.ruff.isort]
    known-first-party = ["langchain_poc"]